2008-06-17  kitone  <kitone@gna.org>

	* cs.po:
	Update by petr pisar.

2008-06-12  kitone  <kitone@gna.org>

	* ru.po:
	Add file.

	* ca.po:
	* cs.po:
	* da.po:
	* es.po:
	* fr.po:
	* hu.po:
	* it.po:
	* nl.po:
	* pl.po:
	* pt.po:
	* pt_BR.po:
	* pt_PT.po:
	* subtitleeditor.pot:
	* zh_CN.po:
	Update.

2008-05-18  kitone  <kitone@gna.org>

	* POTFILES.in:
	* ca.po:
	* cs.po:
	* da.po:
	* es.po:
	* fr.po:
	* hu.po:
	* it.po:
	* nl.po:
	* pl.po:
	* pt.po:
	* pt_BR.po:
	* pt_PT.po:
	* subtitleeditor.pot:
	* zh_CN.po:
	Update.

2008-05-08  kitone  <kitone@gna.org>

	* da.po:
	* pt.po:
	* zh_CN.po:
	New files.

	* POTFILES.in:
	* ca.po:
	* cs.po:
	* es.po:
	* fr.po:
	* hu.po:
	* it.po:
	* nl.po:
	* pl.po:
	* pt_BR.po:
	* pt_PT.po:
	* subtitleeditor.pot:
	Update.

2008-04-30  kitone  <kitone@gna.org>

	* POTFILES.in:
	Add: src/we/WaveformGenerator.h src/we/WaveformGenerator.cc

2008-04-16  kitone  <kitone@gna.org>

	* POTFILES.in:
	* ca.po:
	* cs.po:
	* es.po:
	* fr.po:
	* hu.po:
	* it.po:
	* nl.po:
	* pl.po:
	* pt_BR.po:
	* pt_PT.po:
	* subtitleeditor.pot:
	Update.

2008-04-15  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files (video player, waveform editor...).

2008-03-24  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update.

2008-02-12  kitone  <kitone@gna.org>

	* POTFILES.in:
	Add: share/glade/dialog-view-manager.glade, src/actions/ViewManager.cc

2008-02-05  kitone  <kitone@gna.org>
	* POTFILES.in:
	* ca.po:
	* cs.po:
	* es.po:
	* fr.po:
	* hu.po:
	* it.po:
	* nl.po:
	* pl.po:
	* pt_BR.po:
	* pt_PT.po:
	* subtitleeditor.pot:

2006-08-14
	* es.po: spanish translation by Amaya Rodrigo <amaya@debian.org>

2006-02-18 
	* ca.po : catalan translation by Gil Forcada <gilforcada@guifi.net>
	* fr.po : french translation by Guillaume de Rugy <guillaume.derugy@free.fr>