@@ -1,11 +1,16 @@
 share/glade/dialog-change-framerate.glade
+share/glade/dialog-character-codings.glade
 share/glade/dialog-check-errors.glade
 share/glade/dialog-check-errors-preferences.glade
 share/glade/dialog-configure-keyboard-shortcuts.glade
 share/glade/dialog-encodings-chooser.glade
+share/glade/dialog-export-text.glade
 share/glade/dialog-find-and-replace.glade
+share/glade/dialog-import-text.glade
 share/glade/dialog-move-subtitles.glade
+share/glade/dialog-open-document.glade
 share/glade/dialog-preferences.glade
+share/glade/dialog-save-document.glade
 share/glade/dialog-scale-subtitles.glade
 share/glade/dialog-script-properties.glade
 share/glade/dialog-spell-checking.glade
@@ -43,6 +48,7 @@ src/actions/SplitDocument.cc
 src/actions/SplitSubtitle.cc
 src/actions/StyleEditor.cc
 src/actions/StyleEditor.h
+src/actions/TimeModeManagement.cc
 src/actions/Transcript.cc
 src/actions/TryToExtendToPerfect.cc
 src/actions/UndoRedo.cc
@@ -94,10 +100,14 @@ src/formats/SubtitleTimedText.cc
 src/formats/SubtitleTimedText.h
 src/formats/SubtitleTTXT.cc
 src/formats/SubtitleTTXT.h
+src/GtkUtility.cc
+src/GtkUtility.h
 src/gui/Application.cc
 src/gui/Application.h
 src/gui/CheckErrorsUI.cc
 src/gui/CheckErrorsUI.h
+src/gui/DialogCharacterCodings.cc
+src/gui/DialogCharacterCodings.h
 src/gui/DialogFileChooser.cc
 src/gui/DialogFileChooser.h
 src/gui/DialogUtility.cc
@@ -146,6 +156,8 @@ src/SubtitleTime.cc
 src/SubtitleTime.h
 src/SubtitleView.cc
 src/SubtitleView.h
+src/TimeUtility.cc
+src/TimeUtility.h
 src/unittest/testColor.cc
 src/unittest/testRegEx.cc
 src/unittest/testSubtitleLoaders.cc
