@@ -1,3 +1,8 @@
+2008-08-05  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	Update with new files.
+
 2008-06-17  kitone  <kitone@gna.org>
 
 	* cs.po:
